fixed styling in TabChat and Tabn DM chats so that bottom messages are not hidden by the footer

--- a/client/src/components/SidebarComponents/TabDmChats/TabDmChats.css
+++ b/client/src/components/SidebarComponents/TabDmChats/TabDmChats.css
@@ -1,14 +1,15 @@
 .TabDmChats-chat-wrapper {
-	height: 100vh;
+	height: 100%;
 	width: 430px;
 	transition: 350ms;
 	background-color: rgb(241, 245, 248);
+	padding-bottom: 120px;
+	overflow: visible;
 	/* background-color: yellow; */
 }
 
 .TabDmChats-chat-body {
 	flex: 1;
-	overflow: scroll;
 }
 
 .TabDmChats-chat-you {
