--- a/client/src/components/SidebarComponents/TabRoomChats/TabRoomChats.css
+++ b/client/src/components/SidebarComponents/TabRoomChats/TabRoomChats.css
@@ -1,8 +1,9 @@
 .TabRoomChats-chat-wrapper {
 	position: relative;
-	height: 100vh;
+	height: 100%;
 	background-color: rgb(241, 245, 248);
 	overflow: visible;
+	padding-bottom: 120px;
 }
 
 .TabRoomChats-chat-body {
